force-app/main/default/objects/WheelSteelGrade__c/WheelSteelGrade__c.object-meta.xml
<CustomObject>
    <description>Steel grade for wheels and joint products</description>
    <label>Wheel Steel Grade</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wheel Steel Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>