force-app/main/default/objects/WheelSteelGrade__c/fields/ERP_FacetGroup__c.field-meta.xml
<CustomField>
    <fullName>ERP_FacetGroup__c</fullName>
    <label>ERP_FacetGroup</label>
    <length>18</length>
    <type>Text</type>
</CustomField>