force-app/main/default/objects/WheelSteelGrade__c/fields/NameRus__c.field-meta.xml
<CustomField>
    <fullName>NameRus__c</fullName>
    <label>Name (Rus)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>