force-app/main/default/objects/WheelSteelGrade__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <label>Short Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>