force-app/main/default/objects/WheelSteelGrade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NameRus__c</columns>
    <columns>ShortName__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>Obsolete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>